# python-devcontainer-template

./: pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
notebook/: engine.ipynb
